Add News Endpoints
